[package]
name = "tenorite"
version = "0.1.1"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
description = "A concurrency abstraction library. Provides a client-server model for asynchronous workers"
readme = "README.md"
repository = "https://github.com/KennethWilke/tenorite"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["sync", "rt"] }
async-trait = "0.1.53"
