[package]
name = "tenorite"
version = "0.1.2"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
description = "A concurrency abstraction library. Provides a client-server model for asynchronous workers"
documentation = "https://docs.rs/tenorite/latest/tenorite/"
readme = "README.md"
repository = "https://github.com/KennethWilke/tenorite"
license = "MIT"
keywords = ["async", "tokio", "concurrency", "utility"]
categories = ["Asynchronous", "Concurrency", "Rust patterns"]

[dependencies]
tokio = { version = "1.17.0", features = ["sync", "rt"] }
async-trait = "0.1.53"
